# Tethering-human-with-quadruped

./: README.md  main.cpp
actor_pos_plugin/: CMakeLists.txt  package.xml
actor_pos_plugin/src/: actor_pos_plugin.cpp  cable.cpp  set_laser_pose.cpp  utils.hpp
alglib_test/: CMakeLists.txt
alglib_test/src/: test.cpp
blind_motion/: CMakeLists.txt  blind_rviz.rviz  package.xml
blind_motion/conf/: config.yaml
blind_motion/launch/: amcl.launch  apf.launch  blind_scene.launch  gmapping.launch  move_base.launch
blind_motion/maps/: map.pgm
blind_motion/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
blind_motion/src/: blind_motion.cpp  scheduler.cpp
blind_motion/urdf/: turtlebot3_burger.xacro  turtlebot3_burger_gazebo.xacro
blind_motion/urdf/Waffle/: turtlebot3_waffle.xacro
blind_motion/worlds/: turtlebot_world.world
dogbot_description/urdf/: dogbot.xacro
dogbot_gazebo/launch/: dog.launch  gztest.launch
dogbot_gazebo/worlds/: man_world.world
force_plugin/: CMakeLists.txt
force_plugin/src/: force_plugin.cpp
gazebo_sensors/: CMakeLists.txt  package.xml
gazebo_sensors/launch/: camera.launch  imu.launch  laser.launch  rgbd.launch
gazebo_sensors/urdf/: base.xacro  camera.xacro  imu.xacro  laser.xacro  rgbd.xacro
idyntree/: CMakeLists.txt
idyntree/src/model_io/urdf/: CMakeLists.txt
idyntree/src/model_io/xml/: CMakeLists.txt
key_teleop/src/: key_teleop.cpp
popt/: CMakeLists.txt
popt/include/: estimator_sem.h
popt/include/towr/models/: robot_model.h
popt/include/towr/models/examples/: dogbot_model.h
popt/launch/: dog.launch  gztest.launch
popt/src/: lopt.cpp  topt.cpp  topt.h
popt/src/client/: estimator_sem.cpp  main.cpp
popt/src/towr/: nlp_formulation.cc  quadruped_gait_generator.cc  robot_model.cc
